// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Baobab Отправляет событие append в blockstat 1`] = `
Object {
  "event": "append",
  "tree": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "id": "some-id",
            "name": "child",
          },
        ],
        "id": "217h",
        "name": "$main",
      },
      Object {
        "children": Array [
          Object {
            "id": "extras-id",
            "name": "extras-node",
          },
        ],
        "id": "217i",
        "name": "extras",
      },
    ],
    "id": "contant-id",
    "name": "$page",
  },
}
`;

exports[`Baobab Отправляет событие show в blockstat 1`] = `
Object {
  "event": "show",
  "tree": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "id": "some-id",
            "name": "child",
          },
        ],
        "id": "217h",
        "name": "$main",
      },
      Object {
        "children": Array [
          Object {
            "id": "extras-id",
            "name": "extras-node",
          },
        ],
        "id": "217i",
        "name": "extras",
      },
    ],
    "id": "contant-id",
    "name": "$page",
  },
}
`;

exports[`Baobab Создаёт правильный корень для "подстраницы" 1`] = `
Object {
  "attrs": Object {
    "ab_attrs": Object {
      "attr": "value",
    },
    "docUi": "touch-phone",
    "main-search": true,
    "reg": 1111,
    "schema-ver": "0",
    "service": "turbo",
    "tech": Object {
      "test-ids": "some-id",
    },
    "ui": "touch",
    "url": "https://example.com",
  },
  "children": Array [],
  "id": "217h",
  "name": "$subpage",
  "trigger-event-id": "event-id",
}
`;

exports[`Baobab Создаёт правильный корень для обычного запроса 1`] = `
Object {
  "attrs": Object {
    "ab_attrs": Object {
      "attr": "value",
    },
    "docUi": "touch-phone",
    "reg": 1111,
    "schema-ver": "0",
    "service": "turbo",
    "tech": Object {
      "test-ids": "some-id",
    },
    "ui": "touch",
    "url": "https://example.com",
  },
  "children": Array [],
  "id": "217h",
  "name": "$page",
  "trigger-event-id": "event-id",
}
`;
